2007-01-21  Zack Weinberg  <zackw@panix.com>

	* schema_migration.hh (mtn_creator_code): Define the creator code
	we will henceforth insert into databases.
	* schema.sql: Remove manifests, manifest_certs, and manifest_deltas.
	* README.changesets: Old manifest certs are no longer preserved.

	* schema_migration.cc (migration_events): Update.
	(migrate_add_ccode_and_drop_manifest_tables): New migrator.
	(calculate_schema_id): Rename get_schema_data; don't compute the hash.
	Include the creator code in the schema data.
	(temporarily_allowed_tables, compare_schema_hash): New.
	(schema_to_migration): Rename find_migration; operate on a db.
	(classify_schema): Use creator code instead of ad-hoc check when
	deciding if this is a monotone database at all.  Count tables
	instead of referring to the hash to decide if the database is empty.
	(diagnose_unrecognized_schema): Remove schema id from diagnostics.
	(describe_sql_schema, check_sql_schema, migrate_sql_schema)
	(test_migration_step): Adjust to match.

	* database.cc (database::check_format): Manifest tables might not exist.
	(database::initialize): Write the creator code into the database.
	(dump_user_version_cb, format_creator_code): New functions.
	(database::dump): Dump the creator code.
	(database::info): Report the creator code.
	(database::delete_existing_manifests): Drop the tables; don't just
	delete all rows.  Drop manifest_certs too.

	* tests/schema_migration: Fix logic to extract schema version from
	"db version" output. Add migration test for schema
	2881277287f6ee9bfc5ee255a503a6dc20dd5994.
	* tests/schema_migration_bad_schema/possible.dump: Adjust so that
	it is still a possible future database.

	* contrib/mashschema.cc: New developer utility program.

2007-01-20  Zack Weinberg  <zackw@panix.com>

	* database.cc (sql_contexts): Delete write-only variable and all
	code that touches it.
	(database::check_format): Fix grammar error.
	(check_sqlite_format_version): Delete.